2000-08-03  Peter Stephenson  <pws@csr.com>

	* Andrej: 12501: Src/params.c: getenv etc. become zgetenv etc.
	and call getenv where necessary.

2000-08-03  Sven Wischnowsky  <wischnow@zsh.org>

	* 12497: Doc/Zsh/builtins.yo: small fix for `read -r' doc
	
	* 12496: Completion/Core/_path_files: one more problem with
 	quoting of glob characters in filename completion
	
	* 12494: Doc/Zsh/options.yo, Src/Zle/zle_main.c: make binding of
 	^D be used in first column if ignoreeof is set and ^D is bound to
 	a shell function widget
	
2000-08-02  Peter Stephenson  <pws@csr.com>

	* Andrej: 12487: configure.in, Etc/MACHINES, Src/Makefile.in,
	Src/init.c, Src/main.c, Src/makepro.awk, Src/mkmakemod.sh,
	Src/parse.c, Src/zsh.h, Src/Zle/zle_utils.c: Dynamic loading
	on cygwin.

2000-08-02  Clint Adams  <schizo@debian.org>

        * 12489: Src/Modules/files.c, Src/Modules/parameter.c: check
	errno change from pathconf() in case of unlimited path length.

        * 12472: configure.in, Src/Modules/files.c,
	Src/Modules/parameter.c: use pathconf() instead
	of PATH_MAX if possible.

2000-08-02  Adam Spiers  <adam@spiers.net>

	* 12486: Completion/Base/{.distfiles,_cache_invalid,_retrieve_cache,
	_store_cache}, Completion/Builtins/_zstyle, Completion/Linux/_rpm,
	Completion/User/_perl_modules, Doc/Zsh/compsys.yo: new completion
	caching layer

2000-08-02  Sven Wischnowsky  <wischnow@zsh.org>

	* 12483: Completion/Base/_arguments, Completion/Core/_complete,
 	Doc/Zsh/compsys.yo: if compcontext is an assoc, the keys are the
 	completions and the values are their descriptions
	
	* 12475: Completion/Base/_arguments: prefer user-defined specs
 	over ones derived from --help output
	
2000-08-01  Sven Wischnowsky  <wischnow@zsh.org>

	* Jan Fedak: 12463: Completion/User/_slrn: new completion function
	for slrn
	
	* 12462: Completion/Base/_arguments: fix for automatically
 	recognised options, don't expect an argument after each of them
	